Packing etl jar, performance improvements. Added remaining antlr parsers.